# estado-transparente-portal

./: .env.example  .gitignore  Cargo.toml  PRINCIPLES.md  PROMPT_MAESTRO.md  README.md
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: main.jsx
apps/web/src/ui/: App.jsx
config/: sources.json
data/: README.md  demo_presupuesto.csv
docs/: ARCHITECTURE.md  DATA_MODEL.md  FINANCIAMIENTO.md  INDEPENDENCIA_ALGORITMICA.md  LEGAL.md  PAGINA_COMO_NOS_FINANCIAMOS.md  PLANES_PRECIOS.md  SOURCES.md
infra/: db_migrate.sh  docker-compose.yml
scripts/: demo_pipeline.sh
services/api/: Cargo.toml
services/api/src/: main.rs
services/collector/: Cargo.toml
services/collector/src/: main.rs
services/parser/: Cargo.toml
services/parser/src/: main.rs
shared/schema/: artifact.json  fact.json
shared/sql/migrations/: 001_init.sql
